table dropdown overflow bug fixed

--- a/frontend/src/components/Dropdowns/DropdownBasicComponent/DropdownBasicComponent.module.css
+++ b/frontend/src/components/Dropdowns/DropdownBasicComponent/DropdownBasicComponent.module.css
@@ -14,22 +14,9 @@
     flex-shrink: 0;
 }
 .subContainerOptions {
-    position: absolute;
     background-color: white;
-    top: calc(100% + 5px);
-    right: 0;
     border-radius: var(--principal-border-radius);
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.10);
-    transform: scaleY(0);
-    transform-origin: top;
-    opacity: 0;
-    transition: opacity 0.3s ease, transform 0.3s ease;
-    z-index: 2;
-    /* background-color: red; */
-}
-.subContainerOptionsShow {
-    transform: scaleY(100%);
-    opacity: 1;
 }
 .option {
     display: flex;
